# storage/api-docs/api-docs.json
@@ -511,6 +511,59 @@
                 }
             }
         },
+        "/api/generate-fake-identity/{count}": {
+            "get": {
+                "tags": [
+                    "Fake Identity"
+                ],
+                "summary": "Generate a list of fake identities",
+                "operationId": "180d1edf005319f98b882b06c7b28b2b",
+                "parameters": [
+                    {
+                        "name": "count",
+                        "in": "path",
+                        "required": false,
+                        "schema": {
+                            "description": "Number of identities to generate",
+                            "type": "integer",
+                            "default": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of generated fake identities",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "name": {
+                                                "type": "string"
+                                            },
+                                            "email": {
+                                                "type": "string"
+                                            },
+                                            "address": {
+                                                "type": "string"
+                                            },
+                                            "phone": {
+                                                "type": "string"
+                                            },
+                                            "company": {
+                                                "type": "string"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/logs/{id_action}": {
             "get": {
                 "tags": [
@@ -790,6 +843,10 @@
         {
             "name": "Domain",
             "description": "Domain"
+        },
+        {
+            "name": "Fake Identity",
+            "description": "Fake Identity"
         },
         {
             "name": "Logs",
